--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MedSystem</string>
+    <string name="app_name">MedApp</string>
     <string name="open_navigation">Open</string>
     <string name="close_navigation">Close</string>
 </resources>
