--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="close_navigation">Close</string>
     <string name="medicine">Medicine</string>
     <string name="book">Books</string>
+    <string name="download">download</string>
+    <string name="share">share</string>
     <string name="section">
 
         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
