--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="book">Books</string>
     <string name="download">download</string>
     <string name="share">share</string>
+    <string name="medsystem">MedSystem</string>
     <string name="section">
 
         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
