--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
     <string name="article">Write An Article</string>
     <string name="author">Author Name</string>
     <string name="profile">Profile</string>
+    <string name="phoneNo">Phone No</string>
+    <string name="password">password</string>
     <string name="section">
 
         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
