article section added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="enterCategory">Enter Category</string>
     <string name="insert">Insert</string>
     <string name="Ok">Ok</string>
+    <string name="title_Text_article">title Text</string>
+    <string name="publish">publish</string>
     <string name="section">
 
         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
