--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,17 +14,29 @@
     <string name="profile">Profile</string>
     <string name="phoneNo">Phone No</string>
     <string name="password">password</string>
+    <string name="confirm_Password">confirm password</string>
+    <string name="emailAddress">email address</string>
     <string name="guest">Guest</string>
     <string name="enterName">Enter Medicine Name</string>
     <string name="enterPrice">Enter Price</string>
     <string name="enterCategory">Enter Category</string>
     <string name="insert">Insert</string>
-    <string name="Ok">Ok</string>
     <string name="title_Text_article">title Text</string>
+    <string name="no_of_article">No Of Article</string>
+    <string name="count">Count</string>
     <string name="publish">publish</string>
     <string name="details">details</string>
+    <string name="editor">Editor</string>
+    <string name="Register">Register</string>
+    <string name="UserName">UserName</string>
     <string name="logout">Logout</string>
+    <string name="sample_text">     Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
+        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+      </string>
     <string name="Account">Account</string>
+
     <string name="section">
 
         Lorem Ipsum is simply dummy text of the printing and typesetting industry.
